--- a/model-maker/index.html
+++ b/model-maker/index.html
@@ -342,31 +342,33 @@
     <script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
     <script defer data-domain="deepfusion.org" src="https://plausible.io/js/plausible.js"></script>
     
-    <script src="../minjs/anime.min.js"></script>
-    <script src="../minjs/json2html.min.js"></script>
+    <script defer src="../minjs/anime.min.js"></script>
+    <script defer src="../minjs/json2html.min.js"></script>
     
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
 
-    <script src="nodes/handlers/node-master.js"></script>
-    <script src="nodes/handlers/menu-master.js"></script>
+    <script defer src="inputs/multi-in-handler.js"></script>
 
-    <script src="nodes/dense-node.js"></script>
-    <script src="nodes/dropout-node.js"></script>
-    <script src="nodes/input-node.js"></script>
-    <script src="nodes/output-node.js"></script>
-    <script src="nodes/reshape-node.js"></script>
+    <script defer src="nodes/handlers/node-master.js"></script>
+    <script defer src="nodes/handlers/menu-master.js"></script>
 
-    <script src="terminal-handler.js"></script>
-    <script src="events.js"></script>
-    <script src="style.js"></script>
+    <script defer src="nodes/dense-node.js"></script>
+    <script defer src="nodes/dropout-node.js"></script>
+    <script defer src="nodes/input-node.js"></script>
+    <script defer src="nodes/output-node.js"></script>
+    <script defer src="nodes/reshape-node.js"></script>
+
+    <script defer src="terminal-handler.js"></script>
+    <script defer src="events.js"></script>
+    <script defer src="style.js"></script>
     <!-- <script src="node-templates.js"></script> -->
-    <script src="node-creation-handler.js"></script>
-    <script src="terminal-templates.js"></script>
+    <script defer src="node-creation-handler.js"></script>
+    <script defer src="terminal-templates.js"></script>
     <!-- <script src="menu-templates.js"></script> -->
-    <script src="menu-handler.js"></script>
-    <script src="standards.js"></script>
-    <script src="modeling.js"></script>
-    <script src="edge-render.js"></script>
+    <script defer src="menu-handler.js"></script>
+    <script defer src="standards.js"></script>
+    <script defer src="modeling.js"></script>
+    <script defer src="edge-render.js"></script>
 
     </html>
 </body>
